fixed eliminating predicates (Stage 1 and epsilon only part of Stage 2)